<resources>

    <!--App & Header -->
    <string name="app_name">Dispensa V2</string>
    <string name="storage_txt">Dispensa</string>
    <string name="shopping_list_txt">Lista della Spesa</string>
    <string name="expiring_txt">In Scadenza</string>
    <string name="history_txt">Storico</string>
    <string name="ticket_calculator_txt">Calcolatore Buoni Pasto</string>
    <string name="meal_plan_txt">Piano Settimanale</string>
    <string name="search_hint">Cerca</string>

    <!-- Logo Activity -->
    <string name="house_of_disage">La Casa del\nDisagio</string>
    <string name="presents">Presents</string>

    <!-- Add Item Activity -->
    <string name="sezione">Sezione</string>
    <string name="trigger_obbl">Trigger *</string>
    <string name="trigger">Trigger</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="quantità_obbl">Quantità *</string>
    <string name="quantity">Quantità</string>
    <string name="nome_obbl">Nome *</string>
    <string name="name">Nome</string>
    <string name="profile">Profilo</string>
    <string name="crea_button">Crea</string>

    <!-- Storage Activity -->
    <string name="edit">Modifica</string>
    <string name="delete">Elimina</string>
    <string name="line">Linea</string>
    <string name="plus">Più</string>
    <string name="minus">Meno</string>

    <!-- Calculator Activity -->
    <string name="importo">Importo Buoni Pasto:</string>
    <string name="importo_spesa">Importo Spesa:</string>
    <string name="importo_eccedenza">Resto:</string>
    <string name="importo_mancante">Importo per prossimo buono:</string>
    <string name="message">*Il conteggio viene effettuato su un massimo di 8 buoni pasto.</string>
    <string name="calculate_button">Calcola</string>

    <!-- Arrays -->
    <string-array name="importiBP">
        <item>5,20 €</item>
        <item>6,00 €</item>
        <item>7,00 €</item>
        <item>8,00 €</item>
    </string-array>

    <string-array name="sezioni">
        <item>Frutta</item>
        <item>Verdura</item>
        <item>Carne</item>
        <item>Pesce</item>
        <item>Merendine</item>
        <item>Pulizie</item>
        <item>Igiene Personale</item>
        <item>Pasta, Riso, Pane</item>
        <item>Legumi</item>
        <item>Biscotti</item>
        <item>Gatti</item>
        <item>Snack</item>
        <item>Bevande</item>
        <item>Condimenti</item>
        <item>Altro</item>
    </string-array>

    <!-- Descriptions -->
    <string name="add_item_button_desc">add item button</string>
    <string name="calculator_button_desc">calculator button</string>
    <string name="history_button_desc">history button</string>
    <string name="button_antonio_desc">button antonio</string>
    <string name="button_giulia_desc">button giulia</string>
    <string name="button_both_desc">button both</string>
    <string name="back_button_desc">back button</string>
    <string name="filter_button_desc">filter button</string>
    <string name="close_button_desc">filter button</string>
    <string name="search_button_desc">search button</string>
    <string name="logo_desc">logo</string>
    <string name="test_text">Testo di prova per pop up! Testo di prova per pop up!</string>
    <string name="ok">OK</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="example_name">Example Name</string>
    <string name="example_section">Example Section</string>
    <string name="example_quantity">00</string>
    <string name="example_date">05/10/2023</string>
    <string name="example_added">C = 0</string>
    <string name="example_action">Example Action</string>
    <string name="example_time">Example Time</string>
    <string name="example_already_present">P = 0</string>
    <string name="exp_date_switch_label">Rimuovi Data Scadenza   </string>
    <string name="missing_days_example">Mancano 7 giorni alla scadenza</string>
    <string name="mandatory">IMPORTANTI</string>
    <string name="optional">OPZIONALI</string>
    <string name="monday_example">Lunedì 00</string>


</resources>