<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/rounded_image_view"
        android:id="@+id/fruit_menu_image"
        android:layout_height="300dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@mipmap/fruit_image" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/storage_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/shopping_list_button"
        android:layout_marginBottom="30dp"
        android:text="@string/storage_txt"
        android:textColor="@color/light_blue"
        android:fontFamily="@font/ubuntu"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shopping_list_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/expiring_button"
        android:layout_marginBottom="30dp"
        android:text="@string/shopping_list_txt"
        android:textColor="@color/light_blue"
        android:fontFamily="@font/ubuntu"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/expiring_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/expiring_txt"
        android:textColor="@color/light_blue"
        android:fontFamily="@font/ubuntu"/>

    <ImageButton
        android:id="@+id/add_item_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/plus"
        android:backgroundTint="@color/yellow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_item_button_desc" />

    <ImageButton
        android:id="@+id/calculator_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/icons8_calculator_50"
        android:backgroundTint="@color/yellow"
        android:layout_alignEnd="@+id/add_item_button"
        android:layout_above="@+id/add_item_button"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/calculator_button_desc" />

    <ImageButton
        android:id="@+id/history_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/actionModeFindDrawable"
        android:backgroundTint="@color/yellow"
        android:layout_alignEnd="@+id/calculator_button"
        android:layout_above="@+id/calculator_button"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/history_button_desc" />

    <ImageButton
        android:id="@+id/boy_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/icons8_ragazzo_dei_cartoni_animati_64"
        android:backgroundTint="@color/gray"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/button_antonio_desc" />

    <ImageButton
        android:id="@+id/girl_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/icons8_ragazza_64"
        android:backgroundTint="@color/gray"
        android:layout_above="@+id/boy_button"
        android:layout_alignStart="@+id/boy_button"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/button_giulia_desc" />

    <ImageButton
        android:id="@+id/both_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/icons8_appuntamento_uomo_donna_50"
        android:backgroundTint="@color/gray"
        android:layout_above="@+id/girl_button"
        android:layout_alignStart="@+id/girl_button"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/button_both_desc" />

</RelativeLayout>