<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_name"
        android:textColor="@color/main_blue"
        android:layout_alignParentStart="true"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="18sp"
        android:layout_toStartOf="@+id/exp_date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/example_date"
        android:textColor="@color/main_blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/missing_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/missing_days_example"
        android:textColor="@color/main_blue"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_blue"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/missing_days"
        android:contentDescription="@string/line" />

</RelativeLayout>