<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:forceDarkAllowed="true">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/already_present"
        android:layout_centerVertical="true"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/ubuntu"
        android:layout_marginStart="15dp"
        android:text="@string/example_name"
        android:textStyle="bold"
        android:textColor="@color/main_blue"/>

    <TextView
        android:id="@+id/added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:maxWidth="120dp"
        android:text="@string/example_added"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/main_blue"/>

    <TextView
        android:id="@+id/already_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/added"
        android:text="@string/example_already_present"
        android:textSize="12sp"
        android:maxWidth="120dp"
        android:textStyle="normal"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/main_blue"/>

    <ImageButton
        android:id="@+id/plus_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/check"
        android:background="@drawable/icons8_pi__50"
        android:backgroundTint="@color/main_blue"
        android:contentDescription="@string/edit"/>

    <ImageButton
        android:id="@+id/minus_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_below="@id/plus_button"
        android:layout_alignEnd="@id/plus_button"
        android:layout_marginTop="8dp"
        android:background="@drawable/icons8_meno_50"
        android:backgroundTint="@color/main_blue"
        android:contentDescription="@string/edit" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:drawableTint="@color/main_blue"/>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/minus_button"
        android:background="@color/main_blue"
        android:foregroundTint="@color/main_blue"
        app:tint="@color/main_blue"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/line"
        app:srcCompat="@android:drawable/bottom_bar" />

</RelativeLayout>