<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logo_layout"
    android:background="@color/white"
    android:forceDarkAllowed="true"
    tools:context=".activities.LoaderActivity">

    <TextView
        android:id="@+id/house_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/house_of_disage"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/light_blue"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/presents_txt"/>

    <TextView
        android:id="@+id/presents_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/presents"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/light_blue"
        android:layout_below="@id/house_txt"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_txt"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/fruit_icon_foreground"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/storage_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/presents_txt"/>

    <TextView
        android:id="@+id/storage_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/storage_txt"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="60sp"
        android:textColor="@color/light_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage"/>

</androidx.constraintlayout.widget.ConstraintLayout>